# queue_system

./: 1.py  README.md  ai_predictor.py  app.py  models.py  pyproject.toml  queue_management.db  replit.md  report.html  wait_time_updater.py
static/css/: style.css
static/js/: queue-management.js
templates/: customer_status.html  index.html
